Version 0.6.10 (2008-05-30):

	* Allow access to job directory files thru the source/files.php script.
	
	* Use arial as default font. Downscaled as google does (looks better
	  in all browsers).
	  
	* The "getting started" is now by-passed when batchelor is
	  configured (see bottom of conf/config.inc for details).

Version 0.6.9 (2008-05-21):
	
	* A maintenance release fixing some small bugs like missing PHP
	  upload limit in context help and preservation of sort and filter
	  options when deliting jobs or doing jobcontrol.
	  
Version 0.6.8 (2008-05-21):

	* Context help is now visible on right side of the body in the same
	  style as the the left hand menu. The verbosity is configurable in 
	  conf/config.inc and can be extended by the context_help_hook() 
	  function defined in include/hooks.inc
	  
	* Hook functions show_indata_hook() and show_result_hook() has been
	  added to let the user modify the formatting of result and indata.

Version 0.6.7 (2008-05-20):

	* Adding job control allowing terminate, stop, resume, kill of
	  running jobs. Configured in conf/config.inc. Disabled by default.
	  
Version 0.6.6 (2008-05-14):

	* Works together with batch queue not using numeric job ID's.
	
	* The indata uploaded thru the "process data" form is now only
	  limited by PHP's max upload size config variable.
	  
Version 0.6.5 (2008-05-12):

	* Ported batchelor to SUN Solaris 8.
	
	* Fixed encoding problems of swedish characters.
	
Version 0.6.4 (2008-04-03):

	* Added jobdir argument to pre_enqueue_hook() (make sure to update
	  include/hooks.inc if you use this function).
	  
	* Added parable curve and random distribution (non-strict) filter to 
	  smoothen data when plotting the sysload by hours statistics. These
	  can be configured in utils/collect.php

Version 0.6.3 (2008-03-18):

	* Fixed HTML title in generated HTML code. Each page should get an
	  unique title.
	  
	* Fixed sorting of date in statistics navigator. The links now has